feat(t6m): pagination func (#303)
* patch(t6m): cosmetic change

* feat(t6m): pagination the 1st part

* feat(t6m): pagination the 2nd part

- not finished
- need to lock last page
- make flow to go previous or last page

* patch(t6m): cosmetic change

* feat(t6m): finished pagination for skills

* chore(documentation): update readme

- added new point in Features
- added new preview.gif