@@ -1,12 +1,10 @@
 package io.starter.telegram.service;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
-import io.starter.telegram.Constants;
 import io.starter.telegram.cash.state.CallbackState;
+import io.starter.telegram.constants.Constants;
 import io.starter.telegram.constants.Emoji;
 import io.starter.telegram.constants.LeagueSetting;
 import io.starter.telegram.dao.SkillDao;
@@ -15,12 +13,16 @@ import io.starter.telegram.entity.LeagueEntity;
 import io.starter.telegram.model.aggregator.Skill;
 import io.starter.telegram.utils.generator.messages.AnswerCallbackQueryGenerator;
 import io.starter.telegram.utils.generator.messages.EditMessageGenerator;
+import io.starter.telegram.utils.generator.replykeyboard.InlineKeyboardGenerator;
+import io.starter.telegram.utils.generator.replykeyboard.buttons.InlineKeyboardButtonGenerator;
+import io.starter.telegram.utils.generator.replykeyboard.rows.InlineKeyboardRowGenerator;
 
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import org.telegram.telegrambots.meta.api.methods.AnswerCallbackQuery;
 import org.telegram.telegrambots.meta.api.methods.updatingmessages.EditMessageText;
 import org.telegram.telegrambots.meta.api.objects.CallbackQuery;
+import org.telegram.telegrambots.meta.api.objects.User;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardRow;
@@ -43,34 +45,68 @@ public class CallbackAnswerService {
     return AnswerCallbackQueryGenerator.generateAnswerCallbackQuery(callbackQuery.getId());
   }
 
+  // TODO: not finished
   public EditMessageText onClickSkills(CallbackQuery callbackQuery) {
-    LeagueEntity leagueEntity = userDao.readLeague(callbackQuery.getFrom());
+    User from = callbackQuery.getFrom();
+    LeagueEntity leagueEntity = userDao.readLeague(from);
     List<Skill> skills = skillDao.readAll(leagueEntity);
-    String inlineMessage = convertSkillsToStringBuilder(skills).toString();
-    InlineKeyboardMarkup keyboard = onClickSkills();
+    CallbackState callbackState = CallbackState.byData(callbackQuery.getData());
+    int page = userDao.readSkillPage(from);
+    String inlineMessage = StringUtils.EMPTY;
+    if (callbackState == CallbackState.ALL_SKILLS || callbackState == CallbackState.REFRESH_SKILLS) {
+      inlineMessage = toPaginatedMessage(page, skills);
+    }
+    if (callbackState == CallbackState.SKILLS_NEXT) {
+      page = checkAndSyncPage(++page, skills);
+      inlineMessage = toPaginatedMessage(page, skills);
+    }
+    if (callbackState == CallbackState.SKILLS_PREVIOUS) {
+      page = checkAndSyncPage(--page, skills);
+      inlineMessage = toPaginatedMessage(page, skills);
+    }
+    userDao.saveSkillPage(from, page);
+    InlineKeyboardMarkup keyboard = onClickSkills(page);
     return EditMessageGenerator.generate(callbackQuery.getMessage(), inlineMessage, keyboard);
   }
 
-  private InlineKeyboardMarkup onClickSkills() {
-    InlineKeyboardMarkup markup = new InlineKeyboardMarkup(Collections.emptyList());
-    List<InlineKeyboardRow> keyboard = new ArrayList<>();
-    InlineKeyboardButton refreshBtn = InlineKeyboardButton.builder()
-        .text(Emoji.REPEAT.value)
-        .callbackData(CallbackState.REFRESH_SKILLS.value)
-        .build();
-    List<InlineKeyboardButton> buttons = List.of(refreshBtn);
-    keyboard.add(new InlineKeyboardRow(buttons));
-    markup.setKeyboard(keyboard);
-    return markup;
+  private InlineKeyboardMarkup onClickSkills(int page) {
+    List<InlineKeyboardButton> headerButtons = List.of(
+        InlineKeyboardButtonGenerator.generate(Emoji.LEFT.value, CallbackState.SKILLS_PREVIOUS.value),
+        InlineKeyboardButtonGenerator.generate(String.valueOf(page), CallbackState.CURRENT.value),
+        InlineKeyboardButtonGenerator.generate(Emoji.RIGHT.value, CallbackState.SKILLS_NEXT.value)
+    );
+    List<InlineKeyboardButton> footerButtons = List.of(
+        InlineKeyboardButtonGenerator.generate(Emoji.REPEAT.value, CallbackState.REFRESH_SKILLS.value)
+    );
+    List<InlineKeyboardRow> keyboard = InlineKeyboardRowGenerator.generate(headerButtons, footerButtons);
+    return InlineKeyboardGenerator.withRows(keyboard);
   }
 
-  private StringBuilder convertSkillsToStringBuilder(List<Skill> skills) {
+  // TODO: create task for realizing paginated message over Fabric Pattern
+  private String toPaginatedMessage(int page, List<Skill> skills) {
+    final int itemsPerPage = 10;
+    int start = (page - 1) * itemsPerPage;
+    int end = Math.min(start + itemsPerPage, skills.size());
     final StringBuilder builder = new StringBuilder();
-    skills.forEach(skill -> builder
-        .append(skill.getName())
-        .append(Constants.General.SEPARATER)
-        .append(Math.round(skill.getChaosEquivalentProfit()))
-        .append(StringUtils.LF));
-    return builder;
+    for (int i = start; i < end; i++) {
+      builder
+          .append(skills.get(i).getName())
+          .append(Constants.General.SEPARATER)
+          .append(Math.round(skills.get(i).getChaosEquivalentProfit()))
+          .append(StringUtils.LF);
+    }
+    return builder.toString();
+  }
+
+  private int checkAndSyncPage(int page, List<Skill> skills) {
+    final int itemsPerPage = 10;
+    int totalPages = (int) Math.ceil((double) skills.size() / itemsPerPage);
+    if (page < 1) {
+      page = totalPages;
+    }
+    if (page > totalPages) {
+      page = 1;
+    }
+    return page;
   }
 }
